link target blank added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             CSS3, Bootstrap, basic JavaScript, and WordPress customization with
             SEO and responsive mobile-first web development.
           </p>
-          <a class="link-button" href="https://www.linkedin.com/in/muinchowdhury/">HIRE ME</a>
+          <a class="link-button" target="_blank" href="https://www.linkedin.com/in/muinchowdhury/">HIRE ME</a>
         </h1>
       </div>
 
@@ -46,7 +46,7 @@
         <h1>Dream Big</h1>
         <h3 class="orange-color">Become a Web Developer</h3>
         <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-        <a class="link-button" href="resources/Profile.pdf" download>DOWNLOAD RESUME</a>
+        <a class="link-button" target="_blank" href="resources/Profile.pdf" download>DOWNLOAD RESUME</a>
       </div>
     </section>
 
